# daberu

./: Cargo.toml  README.md
.github/workflows/: ci.yml
configs/: default.jsonc  sile.jsonc
llm-docs/: create-mp4-rust.sh  create-noargs.sh  create-nojson.sh  create-orfail.sh  create-rust-lib.sh  create-tuinix.sh  mp4-rust.md  noargs.md  nojson.md  orfail.md  raftbare.md  tuinix.md
skills/: README.md  create-nojson-skill.sh  create-sora-python-sdk-skill.sh
skills/nojson/: SKILL.md
skills/nojson/references/: API_REFERENCE.md  EXAMPLES.md  api-guide.md  api.md  examples.md  patterns.md
skills/sora-python-sdk/: SKILL.md
skills/sora-python-sdk/references/: api_reference.md  examples.md  hardware_acceleration.md
src/: chat_gpt.rs  claude.rs  command.rs  config.rs  curl.rs  gist.rs  json.rs  lib.rs  main.rs  message.rs  resource.rs  subcommand_clean_files.rs  subcommand_create_skill.rs  subcommand_delete_file.rs  subcommand_delete_skill.rs  subcommand_get_file.rs  subcommand_get_file_metadata.rs  subcommand_get_skill.rs  subcommand_last.rs  subcommand_list_files.rs  subcommand_list_skills.rs
