[package]
name = "daberu"
version = "0.4.1"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Claude client tool that reads your message from stdin and writes the response to stdout"
homepage = "https://github.com/sile/daberu"
repository = "https://github.com/sile/daberu"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
noargs = "0.4.0"
nojson = "0.2.0"
orfail = "1"
